--- a/index.html
+++ b/index.html
@@ -9,10 +9,72 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .fast-mode-banner {
+            background: linear-gradient(90deg, #ff0000, #cc0000);
+            color: white;
+            text-align: center;
+            padding: 12px 20px;
+            font-weight: 700;
+            font-size: 1rem;
+            letter-spacing: 0.5px;
+            text-transform: uppercase;
+            box-shadow: 0 4px 12px rgba(255, 0, 0, 0.3);
+            width: 100%;
+            animation: pulse 2s infinite;
+            white-space: nowrap;
+            overflow: hidden;
+        }
+        .fast-mode-banner .scroll-text {
+            display: inline-block;
+            padding-left: 100%;
+            animation: scroll-left 25s linear infinite;
+        }
+        @keyframes pulse {
+            0% { box-shadow: 0 4px 12px rgba(255, 0, 0, 0.3); }
+            50% { box-shadow: 0 6px 20px rgba(255, 0, 0, 0.5); }
+            100% { box-shadow: 0 4px 12px rgba(255, 0, 0, 0.3); }
+        }
+        @keyframes scroll-left {
+            0% { transform: translateX(0); }
+            100% { transform: translateX(-100%); }
+        }
+        .fast-mode-banner a {
+            color: #fff;
+            text-decoration: underline;
+            font-weight: 800;
+        }
+        .sticky-header {
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+        .navbar {
+            background: rgba(20, 20, 30, 0.95);
+            backdrop-filter: blur(10px);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        }
+        .fast-mode-banner {
+            /* No positioning needed - moves with parent */
+        }
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Inter', sans-serif;
+            background: #0f0f1a;
+            color: #e0e0ff;
+        }
+        .main-content {
+            padding-top: 0;
+        }
+    </style>
 </head>
 <body class="dark-theme">
-    <!-- Navigation -->
-    <nav class="navbar">
+
+    <!-- Sticky Header Container -->
+    <div class="sticky-header">
+        <!-- Navigation (Sticky at top) -->
+        <nav class="navbar">
         <div class="container nav-content">
             <div class="logo-section">
                 <div class="logo-icon">
@@ -35,6 +97,14 @@
             </div>
         </div>
     </nav>
+
+    <!-- RED SCROLLING BANNER (Under Nav, Sticky, Infinite Scroll) -->
+    <div class="fast-mode-banner">
+        <div class="scroll-text">
+            IF THE JAILBREAKS DON'T WORK → TRY PUTTING THE AI INTO FAST MODE. IF IT STILL DOESN'T WORK, JOIN: <a href="https://discord.gg/9BnY3pc9Vd" target="_blank">https://discord.gg/9BnY3pc9Vd</a>  |  IF THE JAILBREAKS DON'T WORK → TRY PUTTING THE AI INTO FAST MODE. IF IT STILL DOESN'T WORK, JOIN: <a href="https://discord.gg/9BnY3pc9Vd" target="_blank">https://discord.gg/9BnY3pc9Vd</a>
+        </div>
+    </div>
+    </div>
 
     <main class="main-content">
         <div class="container">
@@ -491,4 +561,4 @@ Usage = total consent.
 
     <script src="script.js"></script>
 </body>
-</html>
+    </html>
