Update scrolling banner text in index.html

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <!-- RED SCROLLING BANNER (Under Nav, Sticky, Infinite Scroll) -->
     <div class="fast-mode-banner">
         <div class="scroll-text">
-            IF THE JAILBREAKS DON'T WORK → TRY PUTTING THE AI INTO FAST MODE. IF IT STILL DOESN'T WORK, JOIN: <a href="https://discord.gg/9BnY3pc9Vd" target="_blank">https://discord.gg/9BnY3pc9Vd</a>  |  IF THE JAILBREAKS DON'T WORK → TRY PUTTING THE AI INTO FAST MODE. IF IT STILL DOESN'T WORK, JOIN: <a href="https://discord.gg/9BnY3pc9Vd" target="_blank">https://discord.gg/9BnY3pc9Vd</a>
+            IF THE JAILBREAKS DON'T WORK → TRY PUTTING THE AI INTO FAST MODE. IF IT STILL DOESN'T WORK, JOIN: <a href="https://discord.gg/9BnY3pc9Vd" target="_blank">https://discord.gg/9BnY3pc9Vd</a>  | KEY TO ACTIVATE DEVELOPER MODE IS INSIDE THE SYNVO DISCORD SERVER | IF THE JAILBREAKS DON'T WORK → TRY PUTTING THE AI INTO FAST MODE. IF IT STILL DOESN'T WORK, JOIN: <a href="https://discord.gg/9BnY3pc9Vd" target="_blank">https://discord.gg/9BnY3pc9Vd</a>
         </div>
     </div>
     </div>
