--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Pixels - Premium Liquid Glass UI</title>
+    <title>Project Pixels - Jailbreak AI'S NOW! </title>
     <meta name="description" content="Educational documentation of AI jailbreak techniques and comprehensive defense strategies.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
